packs/smoke-testing/versions/1.1.1/files/docs/packs/smoke-testing/README.md
# Smoke Testing Pack

Provides a dispatchable post-deployment GitHub Actions smoke workflow.

## Flow integration

The workflow's `yoke_dispatch_id` input is part of its delivery contract. The
flow's smoke stage must declare it (`yoke deployment-flows create` at
definition time, `yoke deployment-flows update-stages` afterwards):

```json
{
  "name": "smoke",
  "step_runner": "github-actions-workflow",
  "workflow": "<project>-smoke.yml",
  "dispatch_correlation_input": "yoke_dispatch_id",
  "reconcile_by_head_sha": false
}
```

The correlation marker lets Yoke recover a lost dispatch response and attach
evidence to the exact workflow run. Disabling head-SHA reuse ensures every new
deployment gets a fresh smoke check, even when the same commit is deployed
again.

## Deployed lineage

`commit_sha` is a required `workflow_dispatch` input. It must be one full
40-hex-character source commit SHA. The smoke stage should pass the exact
commit the deployment run shipped, typically via `{head_sha}`:

```json
{
  "inputs": {
    "commit_sha": "{head_sha}"
  }
}
```

The workflow validates that SHA, passes it into the comparison step through an
environment variable, and always compares it to the host's `.deploy-version`
marker. A missing marker or a different SHA fails the check.

## Project-specific work

- Choose meaningful public and authenticated paths, expected responses, and
  timeouts.
- Connect any non-public checks to the project's supported test identity.
- Decide which failures block deployment completion and which only alert.
- Prove dispatch correlation and failure reporting from the real deploy flow.
